--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html {
 body {
   font-family: "Montserrat", sans-serif;
   color: #555555;
-  line-height: 1;
+  line-height: 1.5;
   font-size: 16px;
   font-weight: 400;
 }
@@ -82,9 +82,17 @@ hr {
   background: linear-gradient(to right, #6dbe44, #dfd99d, #04a9f4);
 }
 
+hr.divider {
+  border-top: 1px solid rgba(85, 85, 85, 0.4);
+  border-bottom: 1px solid rgba(85, 85, 85, 0.4);
+  background: transparent;
+  height: 3px;
+}
+
 h1 {
-  font-size: 2rem;
-  color: #ffffff;
+  font-size: 3rem;
+  color: #04a9f4;
+  margin-bottom: 0.5em;
 }
 
 h2 {
@@ -116,24 +124,31 @@ h2 {
   margin-left: 0;
 }
 
+/* HEADER */
 .header {
   height: 50vh;
-}
-
-.header-home {
-  background: url("../img/header1.webp");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
+.header-home {
+  background-image: url("../img/header1.webp");
+}
+
 .header-home h1 {
+  font-size: 2rem;
   background-color: rgba(223, 217, 157, 0.5);
   padding: 30px;
   border-radius: 20px;
   -webkit-box-shadow: 0 0 10px 0px #dfd99d;
           box-shadow: 0 0 10px 0px #dfd99d;
   text-shadow: 0 0 2px #000000;
+  color: #ffffff;
+}
+
+.header-explorer {
+  background-image: url("../img/izleti.webp");
 }
 
 /* EXPLORE */
