--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,10 +8,18 @@ hr {
   height: 5px;
   border: none;
   background: linear-gradient(to right, $green, $cream, $lightBlue);
+  &.divider {
+    border-top: 1px solid rgba($gray, 0.4);
+    border-bottom: 1px solid rgba($gray, 0.4);
+    background: transparent;
+    height: 3px;
+  }
 }
+
 h1 {
-  font-size: 2rem;
-  color: $white;
+  font-size: 3rem;
+  color: $lightBlue;
+  margin-bottom: 0.5em;
 }
 h2 {
   color: $gray;
@@ -39,18 +47,25 @@ h2 {
   }
 }
 
+/* HEADER */
 .header {
   height: 50vh;
+  @include bgBasic;
+
   &-home {
-    background: url("../img/header1.webp");
-    @include bgBasic;
+    background-image: url("../img/header1.webp");
     h1 {
+      font-size: 2rem;
       background-color: rgba($cream, 0.5);
       padding: 30px;
       border-radius: 20px;
       box-shadow: 0 0 10px 0px $cream;
       text-shadow: 0 0 2px $black;
+      color: $white;
     }
+  }
+  &-explorer {
+    background-image: url("../img/izleti.webp");
   }
 }
 
