--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -4,7 +4,8 @@ $fontSize: 16px;
 
 $white: #ffffff;
 $black: #000000;
-$gray: #555555;
+$darkGray: #555555;
+$gray: #f7f8f9;
 $lightGray: #f7f8f9;
 $green: #6dbe44;
 $cream: #dfd99d;
