--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,21 +8,21 @@ hr {
   height: 5px;
   border: none;
   background: linear-gradient(to right, $green, $cream, $lightBlue);
+  box-sizing: border-box;
   &.divider {
-    border-top: 1px solid rgba($gray, 0.4);
-    border-bottom: 1px solid rgba($gray, 0.4);
+    border-top: 1px solid rgba($darkGray, 0.4);
+    border-bottom: 1px solid rgba($darkGray, 0.4);
     background: transparent;
     height: 3px;
   }
 }
-
 h1 {
   font-size: 3rem;
   color: $lightBlue;
   margin-bottom: 0.5em;
 }
 h2 {
-  color: $gray;
+  color: $darkGray;
   font-size: 3rem;
 }
 .overlineTitle {
@@ -37,6 +37,29 @@ h2 {
     background: linear-gradient(to right, $green, $cream, $lightBlue);
   }
 }
+
+.btnMore {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 10px 30px;
+  border: 1px solid $darkGray;
+}
+
+.widget {
+  padding: 30px;
+  background: $gray;
+  margin-bottom: 30px;
+  margin-left: 20px;
+  h5 {
+    border-bottom: 1px solid $green;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+  }
+  li {
+    line-height: 2;
+  }
+}
+
 /* NAV */
 .navbar {
   .nav-item {
@@ -70,6 +93,9 @@ h2 {
   &-events {
     background-image: url("../img/dogadjanja.webp");
   }
+  &-blog {
+    background-image: url("../img/blog1.webp");
+  }
 }
 
 /* EXPLORE */
@@ -99,7 +125,7 @@ h2 {
         color: $lightBlue;
         background-color: $white;
         padding: 10px;
-        text-shadow: 0 0 2px $gray;
+        text-shadow: 0 0 2px $darkGray;
         font-size: 1.5rem;
       }
     }
@@ -129,11 +155,19 @@ h2 {
         transform: scale(110%);
       }
     }
+  }
+}
+
+/* BLOG */
+.blog {
+  img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+  p {
     a {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 10px 30px;
-      border: 1px solid $gray;
+      color: $lightBlue;
     }
   }
 }
