--- a/scss/_basic.scss
+++ b/scss/_basic.scss
@@ -11,7 +11,7 @@ html {
 }
 body {
   font-family: $textFont;
-  color: $gray;
+  color: $darkGray;
   line-height: 1.5;
   font-size: $fontSize;
   font-weight: 400;
