--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -5,7 +5,7 @@ $fontSize: 16px;
 $white: #ffffff;
 $black: #000000;
 $darkGray: #555555;
-$gray: #f7f8f9;
+$gray: #d5d5d5;
 $lightGray: #f7f8f9;
 $green: #6dbe44;
 $cream: #dfd99d;
