--- a/css/style.css
+++ b/css/style.css
@@ -124,9 +124,28 @@ h2 {
   border: 1px solid #555555;
 }
 
+.zoomIn {
+  overflow: hidden;
+}
+
+.zoomIn img {
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  cursor: pointer;
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.zoomIn img:hover {
+  -webkit-transform: scale(110%);
+          transform: scale(110%);
+}
+
 .widget {
   padding: 30px;
-  background: #f7f8f9;
+  background: #d5d5d5;
   margin-bottom: 30px;
   margin-left: 20px;
 }
@@ -173,16 +192,11 @@ h2 {
   color: #ffffff;
 }
 
-.header-explorer {
-  background-image: url("../img/izleti.webp");
-}
-
-.header-events {
-  background-image: url("../img/dogadjanja.webp");
-}
-
-.header-blog {
-  background-image: url("../img/blog1.webp");
+.header img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 /* EXPLORE */
@@ -226,6 +240,21 @@ h2 {
   font-size: 1.5rem;
 }
 
+.explore-posts .col-md-4 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 31%;
+          flex: 0 0 31%;
+  max-width: 31%;
+  border: transparent;
+  border-bottom: 2px solid #d5d5d5;
+  border-radius: 0;
+}
+
+.explore-posts .col-md-4 .card-body {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 /* EVENTS */
 .events-index {
   background-color: #f7f8f9;
@@ -243,21 +272,6 @@ h2 {
           flex: 0 0 31%;
   -webkit-box-shadow: 0 0px 10px 0px rgba(0, 0, 0, 0.7);
           box-shadow: 0 0px 10px 0px rgba(0, 0, 0, 0.7);
-}
-
-.events .col-md-4 div {
-  overflow: hidden;
-}
-
-.events .col-md-4 img {
-  -webkit-transition: 0.3s ease;
-  transition: 0.3s ease;
-  cursor: pointer;
-}
-
-.events .col-md-4 img:hover {
-  -webkit-transform: scale(110%);
-          transform: scale(110%);
 }
 
 /* BLOG */
