--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -10,7 +10,9 @@ $lightGray: #f7f8f9;
 $green: #6dbe44;
 $cream: #dfd99d;
 $lightBlue: #04a9f4;
-
+$darkBlue: #3b5998;
+$red: #bb0000;
+$purple: #8a3ab9;
 $transition: 0.3s ease;
 
 $boxShadow: 0 0px 10px 0px rgba($black, 0.7);
